# -Qt-C-

./: README.md
client/: CMakeLists.txt  CMakeLists.txt.user.3a13715  FilePreview.qml  ImagePreview.qml  VoiceChatView.qml  audio.cpp  audio.h  chat.qml  chat_server.cpp  chat_server.h  loggin.cpp  loggin.h  loggin.ui  main.cpp  picture.qrc  qml.qrc  reg.cpp  reg.h  reg.ui  register.cpp  register.h  register.ui  server.cpp  server.h  shadowwindow.cpp  shadowwindow.h  videochatwidget.cpp  videochatwidget.h  videochatwidget.ui  videohandler.cpp  videohandler.h
server/: CMakeLists.txt  chatClient.cpp  chatClient.h  main.cpp  serverConnect.cpp  serverConnect.h  userMysql.cpp  userMysql.h
